tests/snapshots/snapshot_integration__dot_curly__namespace_function.snap
---
source: tests/snapshot_integration.rs
expression: output
---
digraph {
D0 [shape=box, style=rounded, label="begin"];
{rank = sink; D1 [shape=box, style=rounded, label="end"];}
D4 [shape=box, label="int a = 1;"];
D6 [shape=diamond, label="(a > 0)?"];
D11 [shape=box, label="a++;"];
D13 [shape=box, label="return a;"];
D4 -> D6;
D6:e -> D13:n [xlabel=N];
D11 -> D13;
D6:s -> D11:n [xlabel=Y];
D13 -> D1;
D0 -> D4;
}
