tests/snapshots/snapshot_integration__dot_curly__switch_negative_case.snap
---
source: tests/snapshot_integration.rs
expression: output
---
digraph {
D0 [shape=box, style=rounded, label="begin"];
{rank = sink; D1 [shape=box, style=rounded, label="end"];}
D4 [shape=box, label="int x = -1;"];
D9 [shape=diamond, label="(x) == -1?"];
D10 [shape=diamond, label="(x) == 0?"];
D15 [shape=box, label="x = 10;"];
D17 [shape=box, label="break"];
D19 [shape=box, label="x = 20;"];
D21 [shape=box, label="break"];
D23 [shape=box, label="x = 30;"];
D25 [shape=box, label="return x;"];
D4 -> D9;
D21 -> D25;
D19 -> D21;
D23 -> D25;
D9:e -> D10:n [xlabel=N];
D17 -> D25;
D15 -> D17;
D10:s -> D19:n [xlabel=Y];
D10:e -> D23:n [xlabel=N];
D9:s -> D15:n [xlabel=Y];
D25 -> D1;
D0 -> D4;
}
